--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
+      max-width: 500px;
+      margin: auto;
+      text-align: center;
       padding: 0;
       box-sizing: border-box;
     }
