--- a/index.html
+++ b/index.html
@@ -4,178 +4,212 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Multi-Page Form</title>
+  <title>Two Vertical Sections</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 500px;
-      margin: auto;
-      text-align: center;
+      margin: 0;
       padding: 0;
       box-sizing: border-box;
+      display: flex;
+      height: 100vh;
     }
 
-    .page {
-      display: none;
+    section {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: #f0f0f0;
+      border-right: 1px solid #ccc;
     }
 
-    .page.active {
-      display: block;
+    .options {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-bottom: 20px;
     }
 
-    button {
-      cursor: pointer;
+    label {
+      margin-top: 5px;
+      margin-right: 20px;
     }
 
-    .error-message {
-      color: red;
+    h1,
+    h4 {
+      color: #333;
+    }
+
+    /* Add the following CSS to make options appear in line */
+    .options label {
+      display: flex;
+      align-items: center;
+    }
+
+    .options input[type="radio"] {
+      margin-right: 5px;
+    }
+
+    .ques_list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .num_input {
+      margin-bottom: 20px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
     }
   </style>
 </head>
 
 <body>
 
-  <form id="multiPageForm" onsubmit="return validatePage3()">
-    <!-- Page 1 -->
-    <div class="page active" id="page1">
-      <h2>Page 1</h2>
-      <p>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-        <span id="nameError" class="error-message"></span>
-      </p>
-
-      <p>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <span id="emailError" class="error-message"></span>
-      </p>
-
-      <button type="button" onclick="nextPage('page1', 'page2')">Next</button>
+  <section>
+    <div class="options" id="option1" onsubmit="return val_q1()">
+      <p class="question">Online moisture sensor already installed on Dryer or Cooler</p>
+      <label>
+        <input type="radio" name="option1" value="true">
+        Yes
+      </label>
+      <label>
+        <input type="radio" name="option1" value="false">
+        No
+      </label>
     </div>
 
-    <!-- Page 2 -->
-    <div class="page" id="page2">
-      <h2>Page 2</h2>
-      <p>Data from Page 1:</p>
-      <p>Name: <span id="page2Name"></span></p>
-      <p>Email: <span id="page2Email"></span></p>
-
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" rows="4" required></textarea>
-      <button type="button" onclick="prevPage('page2', 'page1')">Previous</button>
-      <button type="button" onclick="nextPage('page2', 'page3')">Next</button>
+    <div class="options" id="option2" onsubmit="return val_q2()">
+      <p>Humidity sensor already installed on hot air exhaust</p>
+      <label>
+        <input type="radio" name="option2" value="true">
+        Yes
+      </label>
+      <label>
+        <input type="radio" name="option2" value="false">
+        No
+      </label>
     </div>
 
-    <!-- Page 3 -->
-    <div class="page" id="page3">
-      <h2>Page 3</h2>
-      <button type="button" onclick="prevPage('page3', 'page2')">Previous</button>
-      <button type="submit">Submit</button>
+    <div class="ques_list">
+      <div class="num_input" id="question3" onsubmit="return val_q3()">
+        <label for="moisture_average">Present Moisture Average:</label>
+        <input type="number" id="moisture_average" name="moisture_average" required>
+      </div>
+
+      <div class="num_input" id="question4" onsubmit="return val_q4()">
+        <label for="annual_production">Annual Production from line:</label>
+        <input type="number" id="annual_production" name="annual_production" required>
+      </div>
+
+      <div class="num_input" id="question5" onsubmit="return val_q5()">
+        <label for="selling_price">Selling price of feed per ton:</label>
+        <input type="number" id="selling_price" name="selling_price" required>
+      </div>
     </div>
-  </form>
+
+
+
+
+
+  </section>
+
+  <section>
+    <p>
+      <span id="common_res"></span>
+    </p>
+    <p>
+      <span id="q1_res"></span>
+    </p>
+    <p>
+      <span id="q2_res"></span>
+    </p>
+  </section>
 
   <script>
-    var page1Name;
-    var page1Email;
-    var page2Message;
+    var q1_ans = document.getElementById('option1');
+    q1_ans.addEventListener('change', val_q1);
 
-    function validatePage1() {
-      var nameInput = document.getElementById('name');
-      var emailInput = document.getElementById('email');
+    function val_q1() {
+      var selectedOption = document.querySelector('input[name="option1"]:checked');
+      var resultElement = document.getElementById('q1_res');
+      // var resultElement = document.getElementById('common_res');
 
-      var nameError = document.getElementById('nameError');
-      var emailError = document.getElementById('emailError');
-
-      var isValid = true;
-
-      if (nameInput.value.trim() === '') {
-        nameError.textContent = 'Name is required';
-        isValid = false;
+      if (selectedOption) {
+        resultElement.textContent = (selectedOption.value);// == "true") ? "Great1" : "OKAY1";
       } else {
-        nameError.textContent = '';
-        page1Name = nameInput.value.trim(); // Store the value for later use
+        resultElement.textContent = ""; // No option selected
       }
+    }
 
-      // Email validation with a stricter pattern
-      var emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
-      if (!emailPattern.test(emailInput.value.trim())) {
-        emailError.textContent = 'Invalid email format';
-        isValid = false;
+    var q2_ans = document.getElementById('option2');
+    q2_ans.addEventListener('change', val_q2);
+
+    function val_q2() {
+      var selectedOption = document.querySelector('input[name="option2"]:checked');
+      var resultElement = document.getElementById('q2_res');
+      // var resultElement = document.getElementById('common_res');
+
+      if (selectedOption) {
+        resultElement.textContent = (selectedOption.value);// == "true") ? "Great2" : "OKAY2";
       } else {
-        emailError.textContent = '';
-        page1Email = emailInput.value.trim(); // Store the value for later use
-      }
-
-      // Add validation for more fields as needed
-
-      return isValid;
-    }
-
-    function nextPage(currentPageId, nextPageId) {
-      if (currentPageId === 'page1' && !validatePage1()) {
-        return;
-      }
-
-      document.getElementById(currentPageId).classList.remove('active');
-      document.getElementById(nextPageId).classList.add('active');
-
-      // Set data from Page 1 on Page 2
-      if (nextPageId === 'page2') {
-        document.getElementById('page2Name').textContent = page1Name;
-        document.getElementById('page2Email').textContent = page1Email;
+        resultElement.textContent = ""; // No option selected
       }
     }
 
-    function validatePage3() {
-      // Add validation for Page 3 fields if needed
-      // generateAndDownloadFile();
-      DownloadExcelFile()
-      return false; // Prevent form submission
+    var q3_ans = document.getElementById('moisture_average');
+    q3_ans.addEventListener('change', val_q3);
+
+    function val_q3() {
+      var moisture_average = document.getElementById('moisture_average');
+      // var resultElement = document.getElementById('q2_res');
+      var resultElement = document.getElementById('common_res');
+      if (moisture_average.value > 6 && moisture_average.value < 10) {
+        resultElement.textContent = moisture_average.value;
+      }
+      else {
+        var text = "Moisture level is not in the acceptable range. Please check and try again." + moisture_average.value
+        alert(text);
+        document.getElementById('moisture_average').value = "";
+      }
     }
 
-    function generateAndDownloadFile() {
-      // You can customize the content of the file as per your requirement
-      var fileContent = "Name: " + page1Name + "\nEmail: " + page1Email + "\nMessage: " + document.getElementById('message').value;
+    var q4_ans = document.getElementById('annual_production');
+    q4_ans.addEventListener('change', val_q4);
 
-      // Create a Blob with the file content
-      var blob = new Blob([fileContent], { type: 'text/plain' });
-
-      // Create a link element to trigger the download
-      var link = document.createElement('a');
-      link.href = URL.createObjectURL(blob);
-      link.download = 'form_data.txt';
-
-      // Append the link to the document and trigger the click event
-      document.body.appendChild(link);
-      link.click();
-
-      // Remove the link from the document
-      document.body.removeChild(link);
-    }
-    function DownloadExcelFile() {
-      // Create a link element pointing to the existing Excel file in the root directory
-      var link = document.createElement('a');
-      link.href = 'data.xlsx';  // Replace 'your_existing_file.xlsx' with the actual filename
-
-      // Set the download attribute to force a download
-      link.download = 'optify_calculator.xlsx';  // Replace 'downloaded_file.xlsx' with the desired name for the downloaded file
-
-      // Append the link to the document and trigger the click event
-      document.body.appendChild(link);
-      link.click();
-
-      // Remove the link from the document
-      document.body.removeChild(link);
+    function val_q4() {
+      var annual_production = document.getElementById('annual_production');
+      // var resultElement = document.getElementById('q2_res');
+      var resultElement = document.getElementById('common_res');
+      if (annual_production.value > 20000 && annual_production.value < 60000) {
+        resultElement.textContent = annual_production.value;
+      }
+      else {
+        var text2 = "annual_production is not in the acceptable range. Please check and try again." + annual_production.value
+        alert(text2);
+        document.getElementById('annual_production').value = "";
+      }
     }
 
+    var q5_ans = document.getElementById('selling_price');
+    q5_ans.addEventListener('change', val_q5);
 
-    function prevPage(currentPageId, prevPageId) {
-      document.getElementById(currentPageId).classList.remove('active');
-      document.getElementById(prevPageId).classList.add('active');
+    function val_q5() {
+      var selling_price = document.getElementById('selling_price');
+      // var resultElement = document.getElementById('q2_res');
+      var resultElement = document.getElementById('common_res');
+      if (selling_price.value > 20000 && selling_price.value < 60000) {
+        resultElement.textContent = selling_price.value;
+      }
+      else {
+        var text2 = "selling_price is not in the acceptable range. Please check and try again." + selling_price.value
+        alert(text2);
+        document.getElementById('selling_price').value = "";
+      }
     }
   </script>
-
 </body>
 
 </html>
