hide section2 for temp

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   </section>
 
-  <section>
+  <!-- <section>
     <p>
       <span id="common_res"></span>
     </p>
@@ -144,7 +144,7 @@
     <p>
       <span id="q2_res"></span>
     </p>
-  </section>
+  </section> -->
 
   <script>
     var q1_ans = document.getElementById('option1');
