Added preview in iframe

--- a/index_bacnkup.html
+++ b/index_bacnkup.html
@@ -130,7 +130,7 @@
     function validatePage3() {
       // Add validation for Page 3 fields if needed
       // generateAndDownloadFile();
-      DownloadExcelFile()
+      DownloadExcelFile();
       return false; // Prevent form submission
     }
 
