disable button inactive on click

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
       // Remove the link from the document
       document.body.removeChild(link);
-      document.getElementById('download_btn').classList.remove('active');
+      // document.getElementById('download_btn').classList.remove('active');
     }
   </script>
 </body>
