--- a/index.html
+++ b/index.html
@@ -71,11 +71,47 @@
     .download_btn.active {
       display: block;
     }
+
+    .overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      /* semi-transparent black background */
+    }
+
+    /* Styles for the popup */
+    .popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 20px;
+      background: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      z-index: 1;
+    }
+
+    /* Styles for the close button */
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+    }
   </style>
 </head>
 
 <body>
-
+  <div class="overlay" id="overlay" onclick="closePopup()"></div>
+  <div class="popup" id="popup">
+    <span class="close-btn" onclick="closePopup()">&times;</span>
+    <!-- <p>This is a simple popup window!</p> -->
+  </div>
   <section>
     <div class="options" id="option1" onsubmit="return val_q1()">
       <p class="question">Online moisture sensor already installed on Dryer or Cooler</p>
@@ -122,7 +158,7 @@
       <p><span id="status_level"> </span></p>
     </div>
 
-    <div class="download_btn" id="download_btn" >
+    <div class="download_btn" id="download_btn">
       <form onsubmit="return download_btn_fun()">
         <button type="submit">Click here to download Excel sheet</button>
       </form>
@@ -203,7 +239,7 @@
       }
       else {
         var text = "Moisture level is not in the acceptable range. Please check and try again." + moisture_average.value
-        alert(text);
+        openPopup(text);
         document.getElementById('moisture_average').value = "";
       }
 
@@ -225,7 +261,7 @@
       }
       else {
         var text2 = "annual_production is not in the acceptable range. Please check and try again." + annual_production.value
-        alert(text2);
+        openPopup(text2);
         document.getElementById('annual_production').value = "";
       }
     }
@@ -246,7 +282,7 @@
       }
       else {
         var text2 = "selling_price is not in the acceptable range. Please check and try again." + selling_price.value
-        alert(text2);
+        openPopup(text2);
         document.getElementById('selling_price').value = "";
       }
     }
@@ -286,6 +322,18 @@
       // Remove the link from the document
       document.body.removeChild(link);
       // document.getElementById('download_btn').classList.remove('active');
+    }
+
+    function openPopup(text) {
+      document.getElementById('popup').textContent = text;
+      document.getElementById('overlay').style.display = 'block';
+      document.getElementById('popup').style.display = 'block';
+    }
+
+    // Function to close the popup
+    function closePopup() {
+      document.getElementById('overlay').style.display = 'none';
+      document.getElementById('popup').style.display = 'none';
     }
   </script>
 </body>
