--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         }
       }
       else {
-        var text = "Moisture level is not in the acceptable range. Please check and try again." + moisture_average.value
+        var text = "Moisture level is not in the acceptable range. Please check and try again.";// + moisture_average.value
         openPopup(text);
         document.getElementById('moisture_average').value = "";
       }
@@ -261,7 +261,7 @@
         }
       }
       else {
-        var text2 = "annual_production is not in the acceptable range. Please check and try again." + annual_production.value
+        var text2 = "Annual production is not in the acceptable range. Please check and try again.";// + annual_production.value
         openPopup(text2);
         document.getElementById('annual_production').value = "";
       }
@@ -282,7 +282,7 @@
         }
       }
       else {
-        var text2 = "selling_price is not in the acceptable range. Please check and try again." + selling_price.value
+        var text2 = "Selling price is not in the acceptable range. Please check and try again.";// + selling_price.value
         openPopup(text2);
         document.getElementById('selling_price').value = "";
       }
